--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "NPM",
+  "name": "nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "dependencies": {
+    "jest": "^26.6.3",
+    "prompt-sync": "^4.2.0"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": ""
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {}
+  "license": "ISC"
 }
